--- a/app/src/main/res/layout/activity_add_new_team_member.xml
+++ b/app/src/main/res/layout/activity_add_new_team_member.xml
@@ -279,6 +279,7 @@
                 android:id="@+id/phoneNoET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
                 android:layout_marginTop="@dimen/_10sdp" />
 
             <LinearLayout
