--- a/app/src/main/res/layout/activity_edit_team_member.xml
+++ b/app/src/main/res/layout/activity_edit_team_member.xml
@@ -261,6 +261,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:imeOptions="actionDone"
                 android:layout_marginBottom="@dimen/_8sdp" />
 
             <LinearLayout
