--- a/app/src/main/res/layout/activity_accounts.xml
+++ b/app/src/main/res/layout/activity_accounts.xml
@@ -32,12 +32,13 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvProfile"
-                android:layout_width="@dimen/_40sdp"
-                android:layout_height="@dimen/_40sdp"
+                android:layout_width="@dimen/_41sdp"
+                android:layout_height="@dimen/_41sdp"
                 android:layout_margin="1dp"
                 android:visibility="visible"
                 app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="@dimen/_20sdp">
+                app:cardCornerRadius="@dimen/_20sdp"
+                android:elevation="0dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -80,9 +81,9 @@
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/_27sdp"
-                    android:layout_marginStart="@dimen/_14sdp"
-                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_13sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginEnd="1dp"
                     android:layout_marginBottom="@dimen/_10sdp"
                     app:cardBackgroundColor="@color/white"
@@ -90,9 +91,10 @@
                     app:cardElevation="@dimen/_5sdp">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginVertical="@dimen/_5sdp"
                         android:layout_marginStart="@dimen/_20sdp"
                         android:layout_marginEnd="@dimen/_20sdp">
 
