--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/mask_group_16"
                 android:orientation="horizontal"
-                android:paddingStart="@dimen/_21sdp"
+                android:paddingStart="@dimen/_20sdp"
                 android:paddingTop="@dimen/_46sdp"
                 android:paddingEnd="@dimen/_21sdp"
                 android:paddingBottom="@dimen/_16sdp">
@@ -163,7 +163,8 @@
                                 android:id="@+id/tv_officially_verified"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_21sdp"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_15sdp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text="@string/business_officially_verified"
@@ -173,7 +174,8 @@
                             <androidx.cardview.widget.CardView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
                                 android:layout_marginBottom="@dimen/_7sdp"
                                 app:cardCornerRadius="@dimen/_7sdp">
@@ -188,7 +190,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:orientation="horizontal"
-                                        android:paddingStart="@dimen/_11sdp"
+                                        android:paddingStart="@dimen/_6sdp"
                                         android:paddingTop="@dimen/_11sdp"
                                         android:paddingEnd="@dimen/_11sdp">
 
@@ -214,7 +216,9 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:orientation="horizontal"
-                                        android:padding="@dimen/_11sdp">
+                                        android:paddingStart="@dimen/_6sdp"
+                                        android:paddingVertical="@dimen/_11sdp"
+                                        android:paddingEnd="@dimen/_11sdp">
 
                                         <TextView
                                             android:layout_width="wrap_content"
@@ -237,15 +241,17 @@
 
                             </androidx.cardview.widget.CardView>
 
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_11sdp"
+                                android:layout_marginStart="@dimen/_10sdp"
+                                android:layout_marginEnd="@dimen/_11sdp"
                                 android:orientation="horizontal">
 
                                 <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:layout_alignParentStart="true"
                                     android:orientation="vertical">
 
                                     <TextView
@@ -285,10 +291,11 @@
                                 <ImageView
                                     android:layout_width="@dimen/_55sdp"
                                     android:layout_height="@dimen/_60sdp"
-                                    android:layout_gravity="center"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerInParent="true"
                                     android:src="@drawable/aditional" />
 
-                            </LinearLayout>
+                            </RelativeLayout>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
