--- a/app/src/main/res/layout/additional_information_change.xml
+++ b/app/src/main/res/layout/additional_information_change.xml
@@ -18,7 +18,6 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_15sdp"
             app:cardCornerRadius="@dimen/_6sdp">
 
             <LinearLayout
@@ -83,7 +82,7 @@
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginBottom="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/dark_grey"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp"
                         android:visibility="visible" />
 
@@ -101,7 +100,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_14sdp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -121,7 +119,7 @@
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginBottom="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:textColor="@color/dark_grey"
+                        android:textColor="@color/primary_black"
                         android:textSize="@dimen/_11ssp" />
 
                     <TextView
@@ -138,6 +136,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_1sdp"
+                    android:layout_marginTop="@dimen/_14sdp"
                     android:layout_marginEnd="@dimen/_11sdp"
                     android:layout_marginBottom="@dimen/_17sdp"
                     android:background="@color/dark_color_bg" />
@@ -156,8 +155,8 @@
                     android:id="@+id/acceptDeclineLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_14sdp"
                     android:orientation="horizontal"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:visibility="visible">
 
                     <LinearLayout
@@ -212,7 +211,6 @@
                     android:id="@+id/acceptMsgTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_weight="1"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/Accepted"
@@ -224,7 +222,6 @@
                     android:id="@+id/declineMsgTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_weight="1"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/Decline"
@@ -236,11 +233,12 @@
                     android:id="@+id/remarksTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_10sdp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
