--- a/app/src/main/res/layout/activity_select_withdraw_method.xml
+++ b/app/src/main/res/layout/activity_select_withdraw_method.xml
@@ -162,7 +162,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/opensans_regular"
-                        android:text="Use a Visa or Mastercard debit cards for instant coyni withdraws via Instant Pay"
+                        android:text="Use Visa or Mastercard debit cards for instant coyni withdraws via Instant Pay"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_10ssp" />
 
