--- a/app/src/main/res/layout/additional_website_changes_item.xml
+++ b/app/src/main/res/layout/additional_website_changes_item.xml
@@ -22,8 +22,8 @@
 
             <CheckBox
                 android:id="@+id/checkboxCB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:textColor="@color/primary_black" />
 
