--- a/app/src/main/res/layout/activity_account_limits.xml
+++ b/app/src/main/res/layout/activity_account_limits.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#f2f4f5"
     android:orientation="vertical"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.AccountLimitsActivity">
 
     <LinearLayout
@@ -19,8 +20,9 @@
             android:id="@+id/alBackbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_43sdp"
+            android:padding="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_13sdp"
             android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
@@ -32,7 +34,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/account_limits"
             android:layout_marginStart="@dimen/_21sdp"
