--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -13,14 +13,15 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
-        android:paddingStart="@dimen/_21sdp"
-        android:paddingTop="@dimen/_45sdp"
         android:paddingEnd="@dimen/_1sdp"
         android:paddingBottom="@dimen/_11sdp">
 
         <LinearLayout
             android:id="@+id/closeLL"
             android:layout_width="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_43sdp"
+            android:padding="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_13sdp"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -33,9 +34,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/dba_information"
+            android:layout_marginStart="@dimen/_21sdp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp" />
 
