--- a/app/src/main/res/layout/activity_fees.xml
+++ b/app/src/main/res/layout/activity_fees.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.business.FeesActivity">
 
     <LinearLayout
@@ -18,10 +19,11 @@
             android:id="@+id/bpbackBtn"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginBottom="@dimen/_14sdp"
-            android:orientation="horizontal">
+            android:layout_marginStart="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_43sdp"
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:orientation="horizontal"
+            android:padding="@dimen/_8sdp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -34,7 +36,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_21sdp"
+            android:layout_marginStart="@dimen/_21sdp"
             android:layout_marginBottom="@dimen/_11sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/fees"
@@ -73,8 +75,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    app:cardCornerRadius="@dimen/_10sdp"
-                    android:elevation="0dp">
+                    android:elevation="0dp"
+                    app:cardCornerRadius="@dimen/_10sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -185,8 +187,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    app:cardCornerRadius="@dimen/_10sdp"
-                    android:elevation="0dp">
+                    android:elevation="0dp"
+                    app:cardCornerRadius="@dimen/_10sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -418,8 +420,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    app:cardCornerRadius="@dimen/_10sdp"
-                    android:elevation="0dp">
+                    android:elevation="0dp"
+                    app:cardCornerRadius="@dimen/_10sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -546,8 +548,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
-                    app:cardCornerRadius="@dimen/_10sdp"
-                    android:elevation="0dp">
+                    android:elevation="0dp"
+                    app:cardCornerRadius="@dimen/_10sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
