--- a/app/src/main/res/layout/activity_merchant_settings_benificial_owners.xml
+++ b/app/src/main/res/layout/activity_merchant_settings_benificial_owners.xml
@@ -24,13 +24,14 @@
                 android:layout_marginBottom="@dimen/_16sdp"
                 android:background="@drawable/bottomradius"
                 android:orientation="vertical"
-                android:paddingStart="@dimen/_21sdp"
-                android:paddingTop="@dimen/_45sdp"
                 android:paddingBottom="@dimen/_11sdp">
 
                 <LinearLayout
                     android:id="@+id/backLL"
                     android:layout_width="@dimen/_30sdp"
+                    android:layout_marginStart="@dimen/_13sdp"
+                    android:padding="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_43sdp"
                     android:layout_height="wrap_content">
 
                     <ImageView
@@ -43,8 +44,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
+                    android:layout_marginTop="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_bold"
+                    android:layout_marginStart="@dimen/_20sdp"
                     android:text="Beneficial Owners "
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
