--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -14,13 +14,14 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
-        android:paddingStart="@dimen/_21sdp"
-        android:paddingTop="@dimen/_45sdp"
         android:paddingBottom="@dimen/_11sdp">
 
         <LinearLayout
             android:id="@+id/preferencesCloseLL"
             android:layout_width="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_13sdp"
+            android:padding="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_43sdp"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -32,8 +33,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:fontFamily="@font/opensans_bold"
+            android:layout_marginStart="@dimen/_21sdp"
             android:text="Preferences"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_16ssp" />
