--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
     android:orientation="vertical"
-    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.business.TeamActivity">
 
     <LinearLayout
@@ -19,9 +19,9 @@
             android:id="@+id/bpbackBtn"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_45sdp"
-            android:layout_marginBottom="@dimen/_14sdp"
+            android:layout_marginStart="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_43sdp"
+            android:padding="@dimen/_8sdp"
             android:orientation="horizontal">
 
             <ImageView
@@ -35,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginEnd="@dimen/_22sdp"
             android:layout_marginBottom="@dimen/_9sdp"
             android:fontFamily="@font/opensans_bold"
