--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -14,13 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_11sdp"
         android:background="@drawable/bottomradius"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_21sdp"
-        android:paddingTop="@dimen/_45sdp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/userDetailsCloseLL"
             android:layout_width="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_43sdp"
+            android:padding="@dimen/_8sdp"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -32,9 +33,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_12sdp"
             android:layout_marginBottom="@dimen/_11sdp"
             android:fontFamily="@font/opensans_bold"
+            android:layout_marginStart="@dimen/_21sdp"
             android:text="User Details"
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_16ssp" />
