--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -39,6 +39,7 @@
                     android:id="@+id/imvCLose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_44sdp"
                     android:layout_marginBottom="@dimen/_13sdp"
                     android:src="@drawable/ic_x" />
