--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -755,6 +755,15 @@
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_10ssp" />
                                     </LinearLayout>
+                                    <TextView
+                                        android:id="@+id/date_of_highest_ticket"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:fontFamily="@font/opensans_regular"
+                                        android:textColor="@color/dark_grey"
+                                        android:textSize="@dimen/_9ssp"
+
+                                        />
                                 </LinearLayout>
 
                                 <LinearLayout
