--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -222,17 +222,15 @@
         android:layout_height="wrap_content"
         android:visibility="gone">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@drawable/arc_shape"></RelativeLayout>
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="300dp"-->
+<!--            android:background="@drawable/arc_shape"></RelativeLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:alpha="0.5"
-            android:background="@drawable/ic_dash_back"
-            android:backgroundTint="@color/white"></RelativeLayout>
+            android:background="@drawable/ic_account_created_bg_curve"></RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -265,7 +263,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="77dp"
+                    android:layout_marginTop="120dp"
                     android:src="@drawable/ic_account_created" />
 
             </RelativeLayout>
