--- a/app/src/main/res/layout/verify_your_account.xml
+++ b/app/src/main/res/layout/verify_your_account.xml
@@ -13,14 +13,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:background="@drawable/arc_shape"></RelativeLayout>
+            android:background="@drawable/arc_shape"
+            android:visibility="gone"></RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:alpha="0.5"
-            android:background="@drawable/ic_dash_back"
-            android:backgroundTint="@color/white"></RelativeLayout>
+            android:background="@drawable/ic_account_created_bg_curve"></RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -60,7 +59,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="77dp"
+                    android:layout_marginTop="120dp"
                     android:src="@drawable/ic_account_created" />
 
             </RelativeLayout>
