--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -39,7 +39,8 @@
                     android:id="@+id/imvCLose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_6sdp"
+                    android:paddingBottom="@dimen/_6sdp"
                     android:layout_marginTop="@dimen/_44sdp"
                     android:layout_marginBottom="@dimen/_13sdp"
                     android:src="@drawable/ic_x" />
@@ -148,7 +149,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_14sdp"
-                                android:fontFamily="@font/opensans_semibold"
+                                android:fontFamily="@font/opensans_regular"
                                 android:text="@string/please_check_the_box_if_you_completed_a_task"
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
