--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -220,12 +220,12 @@
         android:id="@+id/successRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:visibility="visible">
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="300dp"-->
-<!--            android:background="@drawable/arc_shape"></RelativeLayout>-->
+        <!--        <RelativeLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="300dp"-->
+        <!--            android:background="@drawable/arc_shape"></RelativeLayout>-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -246,7 +246,7 @@
                     android:layout_width="@dimen/_15sdp"
                     android:layout_height="@dimen/_15sdp"
                     android:layout_marginStart="@dimen/_32sdp"
-                    android:layout_marginTop="@dimen/_37sdp"
+                    android:layout_marginTop="@dimen/_45sdp"
                     android:src="@drawable/ic_x"
                     app:tint="@color/white" />
 
