--- a/app/src/main/res/layout/verify_your_account.xml
+++ b/app/src/main/res/layout/verify_your_account.xml
@@ -35,11 +35,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_32sdp"
-                    android:layout_marginTop="@dimen/_37sdp">
+                    android:layout_marginTop="@dimen/_45sdp">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_15sdp"
+                        android:layout_height="@dimen/_15sdp"
                         android:src="@drawable/ic_x"
                         android:layout_marginRight="@dimen/_10sdp"
                         app:tint="@color/white" />
