--- a/app/src/main/res/layout/activity_binding_layout.xml
+++ b/app/src/main/res/layout/activity_binding_layout.xml
@@ -11,7 +11,7 @@
     <include
         android:id="@+id/retfoundactcontainer"
         layout="@layout/retrieve_email_foundaccount_layout"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <include
         android:id="@+id/retfailaccontainer"
@@ -31,7 +31,7 @@
     <include
         android:id="@+id/verifyYourAccount"
         layout="@layout/verify_your_account"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
